manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  labels:
    app: my-app
spec:
  selector:
    app: my-app
  ports:
  - port: 8888
    targetPort: 8080
    name: http
  type: ClusterIP
