manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    app: my-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /achinta-hello
spec:
  ingressClassName: nginx
  rules:
  - host: achinta.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myapp-service
            port: 
              number: 8888
